@@ -4,7 +4,6 @@ import com.panaderiafx.utils.ConversorUtils;
 import com.panaderiafx.utils.VerUtils;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class CostoIngredientePorRecetaUtils {
 
@@ -15,22 +14,15 @@ public class CostoIngredientePorRecetaUtils {
     private static List<Map<String, String>> TABLA_INGREDIENTES;
 
     private static void cargarTablas() {
-        if (TABLA_RECETAS == null) {
-            TABLA_RECETAS = VerUtils.verTabla("Recetas");
-        }
-        if (TABLA_RECETAS_INGREDIENTES == null) {
-            TABLA_RECETAS_INGREDIENTES = VerUtils.verTabla("RecetasIngredientes");
-        }
-        if (TABLA_INGREDIENTES == null) {
-            TABLA_INGREDIENTES = VerUtils.verTabla("Ingredientes");
-        }
+        if (TABLA_RECETAS == null) TABLA_RECETAS = VerUtils.verTabla("Recetas");
+        if (TABLA_RECETAS_INGREDIENTES == null) TABLA_RECETAS_INGREDIENTES = VerUtils.verTabla("RecetasIngredientes");
+        if (TABLA_INGREDIENTES == null) TABLA_INGREDIENTES = VerUtils.verTabla("Ingredientes");
     }
 
     public static double calcular(String codReceta, String codIngrediente, double ignorado) {
         if (codReceta == null || codIngrediente == null) return 0;
 
-        if (cachePorReceta.containsKey(codReceta) &&
-                cachePorReceta.get(codReceta).containsKey(codIngrediente)) {
+        if (cachePorReceta.containsKey(codReceta) && cachePorReceta.get(codReceta).containsKey(codIngrediente)) {
             return cachePorReceta.get(codReceta).get(codIngrediente);
         }
 
@@ -39,24 +31,32 @@ public class CostoIngredientePorRecetaUtils {
         Map<String, String> receta = TABLA_RECETAS.stream()
                 .filter(r -> codReceta.equals(r.get("Código receta")))
                 .findFirst().orElse(null);
-        if (receta == null) return 0;
+        if (receta == null) {
+            System.out.printf("❌ Receta no encontrada: %s%n", codReceta);
+            return 0;
+        }
 
         double rendimiento = ParseUtils.toDouble(receta.getOrDefault("Rendimiento", "0"));
-        if (rendimiento <= 0) return 0;
-
-        List<Map<String, String>> ingredientesDeReceta = TABLA_RECETAS_INGREDIENTES.stream()
-                .filter(i -> codReceta.equals(i.get("Código receta")))
-                .collect(Collectors.toList());
+        if (rendimiento <= 0) {
+            System.out.printf("⚠️ Rendimiento inválido para receta %s: %.2f%n", codReceta, rendimiento);
+            return 0;
+        }
 
         Map<String, String> filaIngrediente = TABLA_INGREDIENTES.stream()
                 .filter(i -> codIngrediente.equals(i.get("Código")))
                 .findFirst().orElse(null);
-        if (filaIngrediente == null) return 0;
+        if (filaIngrediente == null) {
+            System.out.printf("❌ Ingrediente no encontrado: %s%n", codIngrediente);
+            return 0;
+        }
 
-        Map<String, String> detalleIngrediente = ingredientesDeReceta.stream()
-                .filter(i -> codIngrediente.equals(i.get("Ingrediente")))
+        Map<String, String> detalleIngrediente = TABLA_RECETAS_INGREDIENTES.stream()
+                .filter(i -> codReceta.equals(i.get("Código receta")) && codIngrediente.equals(i.get("Ingrediente")))
                 .findFirst().orElse(null);
-        if (detalleIngrediente == null) return 0;
+        if (detalleIngrediente == null) {
+            System.out.printf("⚠️ Ingrediente %s no asignado a receta %s%n", codIngrediente, codReceta);
+            return 0;
+        }
 
         String unidadIngrediente = filaIngrediente.getOrDefault("Unidad", "").trim();
         double precio = ParseUtils.toDouble(filaIngrediente.getOrDefault("Precio Local", "0"));
@@ -64,18 +64,20 @@ public class CostoIngredientePorRecetaUtils {
         String unidadUsada = detalleIngrediente.getOrDefault("Unidades", "").trim();
 
         Double cantidadConvertida = ConversorUtils.convertir("Peso", unidadUsada, unidadIngrediente, cantidadUsada, codIngrediente);
-        if (cantidadConvertida == null || cantidadConvertida <= 0) return 0;
+        if (cantidadConvertida == null || cantidadConvertida <= 0) {
+            System.out.printf("⚠️ Conversión fallida: %s -> %s (%s) en %s%n", unidadUsada, unidadIngrediente, codIngrediente, codReceta);
+            return 0;
+        }
 
         double costo = cantidadConvertida * precio;
+        System.out.printf("🧮 Costo %s en %s: %.2f (%.2f * %.2f)%n", codIngrediente, codReceta, costo, cantidadConvertida, precio);
 
         cachePorReceta.computeIfAbsent(codReceta, k -> new HashMap<>()).put(codIngrediente, costo);
-
         return costo;
     }
 
     public static double calcularUnitarioDesdeReceta(String codReceta) {
         if (codReceta == null || codReceta.isBlank()) return 0;
-
         cargarTablas();
 
         Map<String, String> receta = TABLA_RECETAS.stream()
@@ -86,15 +88,14 @@ public class CostoIngredientePorRecetaUtils {
         double rendimiento = ParseUtils.toDouble(receta.getOrDefault("Rendimiento", "0"));
         if (rendimiento <= 0) return 0;
 
-        List<Map<String, String>> ingredientesDeReceta = TABLA_RECETAS_INGREDIENTES.stream()
+        List<Map<String, String>> ingredientes = TABLA_RECETAS_INGREDIENTES.stream()
                 .filter(i -> codReceta.equals(i.get("Código receta")))
-                .collect(Collectors.toList());
+                .toList();
 
         double suma = 0;
-        for (Map<String, String> i : ingredientesDeReceta) {
+        for (Map<String, String> i : ingredientes) {
             String codIng = i.getOrDefault("Ingrediente", "").trim();
-            double costo = calcular(codReceta, codIng, 1);
-            suma += costo;
+            suma += calcular(codReceta, codIng, 1);
         }
 
         return suma / rendimiento;
@@ -103,9 +104,7 @@ public class CostoIngredientePorRecetaUtils {
     public static double calcularDesdeDatosDirectos(String codIngrediente, String unidadUsada, double cantidadUsada) {
         if (codIngrediente == null || unidadUsada == null || cantidadUsada <= 0) return 0;
 
-        if (TABLA_INGREDIENTES == null) {
-            TABLA_INGREDIENTES = VerUtils.verTabla("Ingredientes");
-        }
+        if (TABLA_INGREDIENTES == null) TABLA_INGREDIENTES = VerUtils.verTabla("Ingredientes");
 
         Map<String, String> filaIngrediente = TABLA_INGREDIENTES.stream()
                 .filter(i -> codIngrediente.equals(i.get("Código")))
